[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btrdupd"
version = "0.1.0"
description = "BTRFS deduplication daemon with snapshot support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HansonXyz", email = ""}
]
maintainers = [
    {name = "HansonXyz", email = ""}
]
keywords = ["btrfs", "deduplication", "filesystem", "storage", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "psutil>=5.9.0",
    "xxhash>=3.0.0",
    "humanize>=4.0.0",
    "colorlog>=6.0.0",
    "tabulate>=0.9.0",
    "tomlkit>=0.11.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/HansonXyz/btrdupd"
Documentation = "https://github.com/HansonXyz/btrdupd#readme"
Repository = "https://github.com/HansonXyz/btrdupd.git"
Issues = "https://github.com/HansonXyz/btrdupd/issues"

# Note: This project uses a flat layout (all .py files in root)
# Run directly with: ./btrdupd.py or python3 btrdupd.py
# For pip install, use: pip install -e .

[tool.setuptools]
py-modules = [
    "btrdupd",
    "btrdupd_daemon",
    "btrfs",
    "constants",
    "database",
    "dedup",
    "metrics",
    "monitor",
    "service_manager",
    "status",
]